BASE.HTML: stick footer to bottom of page, POSTS.HTML: fix visibility for cards and reintroduce footer

--- a/static/index.css
+++ b/static/index.css
@@ -1,12 +1,11 @@
 /* General */
 
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
+  height: 100vh;
   background-color: #eef0f4;
+  height: 100vh; 
+  display: flex;
+  flex-direction: column;
 }
 
 .brand {
@@ -99,6 +98,12 @@ nav {
   margin-right: 10px;
 }
 
+.nav-spacer {
+  display: inline-block;
+  height: 110px;
+  width: 100%;
+}
+
 /* Form */
 
 form {
@@ -178,11 +183,9 @@ a:hover a:active {
 /* Footer */
 
 footer {
-  z-index: 1;
   background-color: #f0dbdb;
   width: 100%;
-  position: absolute;
-  bottom: 0;
+  margin-top: auto;
 }
 
 footer i {
